@@ -4,6 +4,6 @@ import com.github.mszarlinski.stories.account.UserDto;
 
 public final class UserExt {
     public static String fullName(UserDto user) {
-        return "%s %s".formatted(user.name(), user.lastName());
+        return String.format("%s %s", user.getName(), user.getLastName());
     }
 }
